--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "parcel": "^2.15.2"
   },
   "dependencies": {
-    "react": "^19.1.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
